# SunnyDay

./: CMakeLists.txt  ChooseCity.qml  CustomCheckBox.qml  HourElement.qml  Main.qml  MoreInfo.qml  MyChooseCity.qml  README.md  applicationengine.cpp  applicationengine.h  listmodel.cpp  listmodel.h  main.cpp
android/: AndroidManifest.xml
